<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:layout="@layout/preference_category_c"
      android:title="@string/setting_category_ui_setting">

    <SwitchPreference
        android:key="dark_mode"
        android:layout="@layout/preference_c"
        android:summaryOff="@string/setting_dark_mode_off_setting"
        android:summaryOn="@string/setting_dark_mode_on_setting"
        android:title="@string/setting_dark_mode_setting"/>

    <SwitchPreference
        android:key="dark_mode_automatic"
        android:layout="@layout/preference_c"
        android:summaryOff="@string/setting_dark_mode_automatic_off_setting"
        android:summaryOn="@string/setting_dark_mode_automatic_on_setting"
        android:title="@string/setting_dark_mode_automatic_setting"/>

    <Preference
        android:key="dark_mode_automatic_start"
        android:layout="@layout/preference_c"
        android:summary="@string/setting_dark_mode_automatic_start_desc_setting"
        android:title="@string/setting_dark_mode_automatic_start_setting"/>

    <Preference
        android:key="dark_mode_automatic_end"
        android:layout="@layout/preference_c"
        android:summary="@string/setting_dark_mode_automatic_end_desc_setting"
        android:title="@string/setting_dark_mode_automatic_end_setting"/>

  </PreferenceCategory>

</PreferenceScreen>
