<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
      android:layout="@layout/preference_category_c"
      android:title="@string/setting_category_quality_q">

    <Preference
        android:key="frame_rate"
        android:layout="@layout/preference_c"
        android:summary="@string/setting_framerate_desc_q"
        android:title="@string/setting_framerate_q"/>

    <Preference
        android:key="resolution"
        app:isPreferenceVisible="false"
        android:layout="@layout/preference_c"
        android:summary="@string/setting_resolution_desc"
        android:title="@string/setting_resolution"/>

    <Preference
        android:key="bit_rate"
        android:layout="@layout/preference_c"
        android:summary="@string/setting_bitrate_desc_q"
        android:title="@string/setting_bitrate_q"/>

    <Preference
        android:key="audio_bit_rate"
        android:layout="@layout/preference_c"
        android:summary="@string/setting_audio_bitrate_desc_q"
        android:title="@string/setting_audio_bitrate_q"/>

  </PreferenceCategory>

</PreferenceScreen>
