<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedAttribute">

  <shortcut
      android:enabled="true"
      android:icon="@drawable/ic_shortcut_settings"
      android:shortcutId="settings"
      android:shortcutLongLabel="@string/settings"
      android:shortcutShortLabel="@string/settings">
    <intent
        android:action="android.intent.action.MAIN"
        android:category="android.intent.category.LAUNCHER"
        android:targetClass="moh.demo.uiterfacec.mainactivities.MainActivity"
        android:targetPackage="moh.demo"/>
    <intent
        android:action="android.intent.action.VIEW"
        android:targetClass="moh.demo.uiterfacec.settings.SettingsActivitymain"
        android:targetPackage="moh.demo"/>
  </shortcut>

  <shortcut
      android:enabled="true"
      android:icon="@drawable/ic_shortcut_record"
      android:shortcutId="start_recording"
      android:shortcutLongLabel="@string/shortcut_record_name"
      android:shortcutShortLabel="@string/shortcut_record_name_short">
    <intent
        android:action="android.intent.action.VIEW"
        android:targetClass="moh.demo.shortcutsdirect.ShortcutActivity"
        android:targetPackage="moh.demo"/>
  </shortcut>

</shortcuts>
